--- a/Kubernetes/postgres/postgres-deployment.yml
+++ b/Kubernetes/postgres/postgres-deployment.yml
@@ -1,10 +1,14 @@
 # postgres deployment object
 
-apiVersion: extensions/v1beta1
+#apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres-deployment
 spec:
+  selector:
+    matchLabels:
+      app: postgres
   replicas: 2
   template:
     metadata:
