--- a/Kubernetes/healthapp/healthapp-deployment.yml
+++ b/Kubernetes/healthapp/healthapp-deployment.yml
@@ -1,10 +1,14 @@
-# healthapp deployment object
+# postgres deployment object
 
-apiVersion: extensions/v1beta1
+#apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: healthapp-deployment
 spec:
+  selector:
+    matchLabels:
+      app: healthapp
   replicas: 2
   template:
     metadata:
