Adding the shell files

--- a/Kubernetes/healthapp/healthapp-configmap.yml
+++ b/Kubernetes/healthapp/healthapp-configmap.yml
@@ -9,4 +9,4 @@ metadata:
 data:
   SPRING_DATASOURCE_USERNAME: postgres
   SPRING_DATASOURCE_PASSWORD: postgres
-  SPRING_DATASOURCE_URL: 192.168.1.102
+  SPRING_DATASOURCE_URL: postgres-service
