--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
   datasource:
     driverClassName: "${SPRING_DRIVER_CLASS_NAME:org.postgresql.Driver}"
-    url: "jdbc:postgresql://${SPRING_DATASOURCE_URL:192.168.1.102:5432}/hospital"
+    url: "jdbc:postgresql://${SPRING_DATASOURCE_URL:192.168.43.169:5432}/hospital"
     username: "${SPRING_DATASOURCE_USERNAME:postgres}"
 #    password: "${SPRING_DATASOURCE_PASSWORD:ENC(7GQy8o2dKOYn0aInWq+pGTlj8fJouDJb)}"
     password: "${SPRING_DATASOURCE_PASSWORD:postgres}"
@@ -20,5 +20,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    hibernate:
+#      ddl-auto: update
 
 
