--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.app</groupId>
-	<artifactId>healthcare</artifactId>
+	<artifactId>healthcare-kubernetes</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>healthcare</name>
 	<description>Health Care App for enroles</description>
